<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorCardBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="83dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/options"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/options_icon_string"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="110dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/snapshot"
                android:background="@color/colorPrimaryText" />

            <ImageView
                android:id="@+id/snapshot"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/video_thumbnail"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/upload_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/indicates_file_uploaded_to_cloud"
                android:padding="5dp"
                android:visibility="gone"
                app:srcCompat="@drawable/cloud" />

            <TextView
                android:id="@+id/videoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/divider"
                android:text="@string/title"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                app:autoSizeTextType="none" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/videoTitle"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/divider"
                android:text="@string/date"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@+id/divider"
                android:text="@string/size"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="30dp"
                android:text="@string/duration"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@+id/divider"
                android:text="@string/location"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>