<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpVerificationActivity">

    <ProgressBar
        android:id="@+id/progress_circular_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:progressTint="@color/colorAccent"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="50dp">

        <LinearLayout
            android:id="@+id/first_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/check_verification_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/check_verification_note"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

<!--        <RelativeLayout-->
<!--            android:id="@+id/second_ll"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/first_ll"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginTop="60dp"-->
<!--            android:orientation="horizontal">-->

            <com.codeplay.geoplay.ui.OtpEditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:digits="1234567890"
                android:layout_below="@id/first_ll"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="64dp"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="#FFFFFF"

                android:hint="Enter OTP"
                android:text=""
                android:textSize="20sp"/>

<!--        </RelativeLayout>-->

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_otp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button"
            android:elevation="10dp"
            android:letterSpacing="0.2"
            android:text="@string/verify"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>